# JKH

./: README.md  pyproject.toml
config/: settings.py
home/templates/: base.html
people/: models.py
sud/: apps.py
